--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skibidi</title>
+    <link rel="icon" href="imagenes/favicon.png" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="css/miestilos.css">
 </head>
+
 <body>
-    
+    <div>
+        <header>
+            Este es el titulo
+        </header>
+    </div>
+    <main>
+        <div>
+            <nav>
+                Principal | Fotos | Videos | Contacto
+            </nav>
+        </div>
+        <div>
+            <!--El atributo id es para identificar la etiqueta de manera unica-->
+            <div id="noticias">
+                Artículos
+            </div>
+            <!--el atributo class es un identificador de grupo-->
+            <div class="noticiaslocales">
+                Cita del articulo uno
+                Cita del articulo dos
+            </div>
+        </div>
+        <div class="noticiaslocales">
+            Cita del articulo uno
+            Cita del articulo dos
+        </div>
+    </div>
+    </main>
 </body>
 </html>
