--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +7,71 @@
     <link rel="icon" href="imagenes/favicon.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="css/miestilos.css">
 </head>
-
 <body>
-    <div>
+    <div class="titulo">
         <header>
-            Este es el titulo
+            Inicio
         </header>
     </div>
     <main>
-        <div>
+        <div id="navegacion">
             <nav>
-                Principal | Fotos | Videos | Contacto
+                <a href="index.html"> Inicio </a> |
+                <a href="fotos.html"> Fotos </a>|
+                <a href="videos.html">Videos </a> |
+                <a href="contacto.html">Contacto </a>
             </nav>
         </div>
         <div>
             <!--El atributo id es para identificar la etiqueta de manera unica-->
             <div id="noticias">
-                Artículos
+                <span>
+                    Artículos
+                </span>
             </div>
             <!--el atributo class es un identificador de grupo-->
             <div class="noticiaslocales">
-                Cita del articulo uno
-                Cita del articulo dos
+                <p>
+                    Cita del articulo uno
+                </p>
+                <p>
+                    Cita del articulo dos
+                </p>
             </div>
         </div>
         <div class="noticiaslocales">
-            Cita del articulo uno
-            Cita del articulo dos
+            <p>
+                Cita del articulo tres
+            <p>
+                Cita del articulo cuatro
+            </p>
         </div>
-    </div>
+        </div>
+        <div>
+            <h1>
+                Libros
+            </h1>
+            <div id=<libro>
+                <div> class="libros">libros: IT, Stephen King</div>
+                <div> class="libros">libros: Carrie, Stephen King</div>
+                <div> class="libros">libros: El resplandor, Stephen King</div>
+                <div> class="libros">libros: Misery, Stephen King</div>
+            </div>
+        </div>
+        <div>
+            <h2>Etiqueta parrafo</h2>
+            <p>
+                La muerte es una quimera: porque mientras yo existo, no existe la muerte;
+                y cuando existe la muerte, ya no existo yo.
+                Epicuro de samos
+            </p>
+            <h2>Etiqueta pre</h2>
+            <pre>
+                La muerte es una quimera: porque mientras yo existo, no existe la muerte;
+                y cuando existe la muerte, ya no existo yo.
+                Epicuro de samos
+            </pre>
+        </div>
     </main>
 </body>
 </html>
