--- a/contacto.html
+++ b/contacto.html
@@ -25,6 +25,10 @@
             </nav>
         </div>
     </main>
+    <footer>
+        <address>Alajuela, Costa Rica</address>
+        <small>&copy; Derechos reservados 2024</small>
+    </footer>
 </body>
 
 </html>
