--- a/fotos.html
+++ b/fotos.html
@@ -24,7 +24,36 @@
                 <a href="contacto.html">Contacto </a>
             </nav>
         </div>
+
+        <div>
+            <h3>Imagen Original</h3>
+            <img src="imagenes/imagen.jpg" </div>
+
+            <div>
+                <p>
+                    <br />
+                    Width-Este atributo declara el ancho de la imagen.
+                    <br />
+                    Height-Este atributo declara la altura de la imagen.
+                    <br />
+                    Alt-Este atributo declara especificamente el texto que se muestra cuando la imagen
+                    no se puede cargar.
+                </p>
+            </div>
+
+            <div>
+                <h3 id="Imagen Original">Imagen modificada</h3>
+                <figure>
+                    <img src="imagenes/bob.jpj.jpg" width="150">
+                    <figcaption>De esta forma llamamos a Bob Cholo</figcaption>
+                </figure>
+            </div>
+
     </main>
+    <footer>
+        <address>Alajuela, Costa Rica</address>
+        <small>&copy; Derechos reservados 2024</small>
+    </footer>
 </body>
 
 </html>
