--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" href="imagenes/favicon.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="css/miestilos.css">
 </head>
+
 <body>
     <div class="titulo">
         <header>
@@ -72,6 +74,25 @@
                 Epicuro de samos
             </pre>
         </div>
+        <div>
+            <p>
+                <strong>muerte es una <em>quimera:</em> </strong> porque mientras yo existo, no existe la
+                muerte;<br /><br />
+                y cuando existe la muerte, ya no existo yo.
+                Epicuro de samos
+            </p>
+        </div>
     </main>
+    <footer>
+        <address>Alajuela, Costa Rica</address>
+        <small>&copy; Derechos reservados 2024</small>
+    </footer>
 </body>
+
 </html>
+<!--br sirve para hacer saltos de linea-->
+<!--Strong sive para poner la letra en negrita-->
+<!--Em sirve para poner letra cursiva-->
+<!--Small sirve para hacer la letra pequeña-->
+<!--Footer sirve para hacer el pie de pagina-->
+<!--Adress sirve para poner la direccion-->
