--- a/videos.html
+++ b/videos.html
@@ -24,7 +24,106 @@
                 <a href="contacto.html">Contacto </a>
             </nav>
         </div>
+
+        <div>
+            <ul>
+                <li>IT, Stephen King</li>
+                <li>Carrie, Stephen King</li>
+                <li>El resplandor, Stephen King</li>
+                <li>Misery, Stephen King</li>
+                </li>
+            </ul>
+        </div>
+
+        <div>
+            <ol type="1">
+                <li>IT, Stephen King</li>
+                <li>Carrie, Stephen King</li>
+                <li>El resplandor, Stephen King</li>
+                <li>Misery, Stephen King</li>
+                </li>
+            </ol>
+        </div>
+
+        <div>
+            <details>
+                <summary>My boocks</summary>
+                <p>It</p>
+                <p>Carrie</p>
+                <p>El resplandor</p>
+                <p>Misery</p>
+            </details>
+        </div>
+
+        <div>
+            <h2>A basic HTML table</h2>
+
+            <style>
+                table {
+                  font-family: arial, sans-serif;
+                  border-collapse: collapse;
+                  width: 100%;
+                }
+                
+                td, th {
+                  border: 1px solid #dddddd;
+                  text-align: left;
+                  padding: 8px;
+                }
+                
+                tr:nth-child(even) {
+                  background-color: #dddddd;
+                }
+                </style>
+
+            <table style="width:100%">
+                <tr>
+                    <th>Pelicula</th>
+                    <th>Genero</th>
+                    <th>Año</th>
+                </tr>
+                <tr>
+                    <td>Pretty Woman</td>
+                    <td>Comedia y romance</td>
+                    <td>1990</td>
+                </tr>
+                <tr>
+                    <td>Anyone but you</td>
+                    <td>Comedia y romance</td>
+                    <td>2023</td>
+                </tr>
+                <tr>
+                    <td>How to lose a guy in 10 days</td>
+                    <td>Comedia y romance</td>
+                    <td>2003</td>
+                </tr>
+                <tr>
+                    <td>Me before you</td>
+                    <td>Comedia y romance</td>
+                    <td>2016</td>
+                </tr>
+                <tr>
+                    <td>10 things i hate about you</td>
+                    <td>Comedia y romance</td>
+                    <td>1999</td>
+                </tr>
+            </table>
+
+            <p>To understand the example better, we have added borders to the table.</p>
+
+        </div>
+
     </main>
 </body>
+<footer>
+    <address>Alajuela, Costa Rica</address>
+    <small>&copy; Derechos reservados 2024</small>
+</footer>
 
 </html>
+<!--ul sirve para crear listas-->
+<!--li sirve para agregar elementos-->
+<!--ol sirve para ser ordenada por letras, numeros, etc-->
+<!--El atributo start para determinar el valor desde el cual los indicadores tienen que comenzar a contar.
+El atributo type para determinar el tipo de indicador que queremos usar. 
+Los valores disponibles para el atributo type son: 1 (números), a (letras minúsculas), A (letras mayúsculas), i (números romanos en minúsculas),I (números romanos en mayúsculas). -->
