--- a/videos.html
+++ b/videos.html
@@ -60,21 +60,22 @@
 
             <style>
                 table {
-                  font-family: arial, sans-serif;
-                  border-collapse: collapse;
-                  width: 100%;
+                    font-family: arial, sans-serif;
+                    border-collapse: collapse;
+                    width: 100%;
                 }
-                
-                td, th {
-                  border: 1px solid #dddddd;
-                  text-align: left;
-                  padding: 8px;
+
+                td,
+                th {
+                    border: 1px solid #dddddd;
+                    text-align: left;
+                    padding: 8px;
                 }
-                
+
                 tr:nth-child(even) {
-                  background-color: #dddddd;
+                    background-color: #dddddd;
                 }
-                </style>
+            </style>
 
             <table style="width:100%">
                 <tr>
@@ -111,6 +112,12 @@
 
             <p>To understand the example better, we have added borders to the table.</p>
 
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lLSu0UHNZhU?si=GJNcIYhaaoEFvqGF" title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
         </div>
 
     </main>
