--- a/contacto.html
+++ b/contacto.html
@@ -108,6 +108,7 @@
                         </label>
                     </p>
                 </div>
+
                 <div>
                     <!--<select>- Este elemento crea una lista de opciones que el usuario puede elegir. 
                         Trabaja junto con el elemento <option> para definir cada opcion-->
@@ -121,8 +122,18 @@
                 </div>
 
                 <div>
+                    <h3> Conocimientos </h3>
+                    <!--Checkbox- Este valor genera una casilla de control que permite al usuario activar o desactivar una opcion.-->
+                    <p><label>HTML<input type="checkbox" name="conocimientos" value="HTML" checked></label></p>
+                    <p><label>CSS<input type="checkbox" name="conocimientos" value="css" checked></label></p>
+                    <p><label>JavaScript<input type="checkbox" name="conocimientos" value="JavaScript" checked></label>
+                    </p>
+                    <p><label>XML<input type="checkbox" name="conocimientos" value="XML" checked></label></p>
+                </div>
+
+                <div>
                     <!-- submit- Este valor genera un boton para enviar el formulario-->
-                     <p><input type="submit" value="Enviar"></p>
+                    <p><input type="submit" value="Enviar"></p>
                 </div>
 
             </form>
